💄 fix body alignment

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -9,5 +9,6 @@ body {
   background-color: variables.$very-dark-blue;
   min-height: 100vh;
   display: flex;
-  place-items: center;
+  justify-content: center;
+  align-items: center;
 }
